@@ -1,3 +1,4 @@
+Better color handling (light/dark) for labels in the Crust tab
 Full hemisphere of earth shown on Crust tab when zoomed out
 Hid FPS readout by default, added developer option to enable it
 Consolidated the time control readout, so now the inner visibility is toggled
